[package]
name = "packet_forwarder_flexible"
version = "0.1.0"
authors = ["Ramla Ijaz <ijazramla@gmail.com>"]
edition = "2021"

[dependencies]
getopts = "0.2.21"

[dependencies.log]
version = "0.4.8"

[dependencies.ixgbe_flexible]
path = "../../kernel/ixgbe_flexible"

[dependencies.spawn]
path = "../../kernel/spawn"

[dependencies.hpet]
path = "../../kernel/acpi/hpet"

[dependencies.libtest]
path = "../../kernel/libtest"

[dependencies.pmu_x86]
path = "../../kernel/pmu_x86"

[dependencies.app_io]
path = "../../kernel/app_io"

[dependencies.irq_safety]
git = "https://github.com/theseus-os/irq_safety"