[package]
name = "ixgbe_flexible"
version = "0.1.0"
description = "A full-featured driver for the 10 GbE Intel 82599 NIC."
authors = ["Ramla <ijazramla@gmail.com>"]
edition = "2021"

[dependencies]
spin = "0.9.0"
volatile = "0.2.4"
bit_field = "0.7.0"
zerocopy = "0.5.0"
static_assertions = "1.1.0"
prusti-contracts = "^0.1"
cfg-if = "1.0.0"
bitflags = "1.0.4"

[dependencies.log]
default-features = false
version = "0.4.8"

[dependencies.irq_safety]
git = "https://github.com/theseus-os/irq_safety"

[dependencies.kernel_config]
path = "../kernel_config"

[dependencies.memory]
path = "../memory"

[dependencies.memory_structs]
path = "../memory_structs"

[dependencies.pci]
path = "../pci"

[dependencies.pit_clock]
path = "../pit_clock"

[dependencies.rand]
version = "0.8"
default-features = false 
features = [ "alloc", "small_rng" ]

[dependencies.prusti_memory_buffer]
path = "../prusti_memory_buffer"

[dependencies.prusti_external_spec]
path = "../prusti_external_spec"

[dependencies.prusti_borrowed_shared_mp]
path = "../prusti_borrowed_shared_mp"

[dependencies.num_enum]
version = "0.5.2"
default-features = false

[lib]
crate-type = ["rlib"] # "lib" does the same thing I think