[package]
name = "ixgbe_restricted"
version = "0.1.0"
description = "Restricted driver for the 10 GbE Intel 82599 NIC. A restricted driver cannot store a packet buffer. It must transmit a packet as soon as it receives it. Ideal for a certain set of network functions."
authors = ["Ramla <ijazramla@gmail.com>"]
edition = "2021"

[dependencies]
spin = "0.9.0"
volatile = "0.2.4"
bit_field = "0.7.0"
owning_ref = { git = "https://github.com/theseus-os/owning-ref-rs" }
zerocopy = "0.5.0"
static_assertions = "1.1.0"
mpmc = "0.1.6"
prusti-contracts = "^0.1"
cfg-if = "1.0.0"
bitflags = "1.0.4"

[dependencies.log]
default-features = false
version = "0.4.8"

[dependencies.irq_safety]
git = "https://github.com/theseus-os/irq_safety"

[dependencies.kernel_config]
path = "../kernel_config"

[dependencies.memory]
path = "../memory"

[dependencies.pci]
path = "../pci"

[dependencies.pit_clock]
path = "../pit_clock"

[dependencies.rand]
version = "0.8"
default-features = false 
features = [ "alloc", "small_rng" ]

[dependencies.hpet]
path = "../acpi/hpet"

[dependencies.prusti_memory_buffer]
path = "../prusti_memory_buffer"

[dependencies.num_enum]
version = "0.5.2"
default-features = false

[lib]
crate-type = ["rlib"] # "lib" does the same thing I think