[package]
name = "memory_buffer"
version = "0.1.0"
description = "Create buffers that don't align on a page size by splitting a MappedPages. Uses the verified representation creator interface."
authors = ["Ramla <ijazramla@gmail.com>"]
edition = "2021"

[dependencies]
spin = "0.9.0"
volatile = "0.2.4"
bit_field = "0.7.0"
owning_ref = { git = "https://github.com/theseus-os/owning-ref-rs" }
zerocopy = "0.5.0"
static_assertions = "1.1.0"
mpmc = "0.1.6"
prusti-contracts = "^0.1"
cfg-if = "1.0.0"
bitflags = "1.0.4"

[dependencies.log]
default-features = false
version = "0.4.8"


[dependencies.kernel_config]
path = "../kernel_config"

[dependencies.memory]
path = "../memory"

[dependencies.prusti_representation_creator]
path = "../prusti_representation_creator"

[lib]
crate-type = ["rlib"] # "lib" does the same thing I think