[package]
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
name = "memory_structs"
description = "Basic types used for memory management"
version = "0.1.0"

[dependencies]
bit_field = "0.7.0"
zerocopy = "0.5.0"
derive_more = "0.99.0"
paste = "1.0.5"
range_inclusive = {git = "https://github.com/Ramla-I/range_inclusive"}

[dependencies.kernel_config]
path = "../kernel_config"

[lib]
crate-type = ["rlib"]
