[package]
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
name = "page_allocator"
description = "The allocator for virtual memory pages."
version = "0.1.0"

[dependencies]
spin = "0.9.4"
intrusive-collections = "0.9.0"

static_assertions = "1.1.0"
assert_fields_type = { path = "../../libs/assert_fields_type" }
proc_static_assertions = { git = "https://github.com/anton-mel/proc-assertions" }

[dependencies.log]
version = "0.4.8"

[dependencies.kernel_config]
path = "../kernel_config"

[dependencies.memory_structs]
path = "../memory_structs"

[dependencies.prusti_page_chunk]
path = "../prusti_page_chunk"

[dependencies.prusti_representation_creator]
path = "../prusti_representation_creator"

[lib]
crate-type = ["rlib"]
