[package]
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
name = "pci"
description = "Basic PCI support for Theseus."
version = "0.1.0"
edition = "2021"

[dependencies]
spin = "0.9.4"
bit_field = "0.7.0"
log = "0.4.8"
volatile = "0.2.4"
zerocopy = "0.5.0"
static_assertions = "1.1.0"

memory = { path = "../memory" }
cpu = { path = "../cpu" }
interrupts = { path = "../interrupts" }
prusti_representation_creator = { path = "../prusti_representation_creator" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
port_io = { path = "../../libs/port_io" }

[target.'cfg(target_arch = "aarch64")'.dependencies]
arm_boards = { path = "../arm_boards" }

[lib]
crate-type = ["rlib"]
