[package]
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
name = "pci"
description = "Basic PCI support for Theseus."
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
prusti-contracts = "0.2"
prusti_external_spec = { path = "../prusti_external_spec" }
prusti_representation_creator = { path = "../prusti_representation_creator" }
proc_static_assertions = { git = "https://github.com/anton-mel/proc-assertions" }
spin = "0.9.4"
log = "0.4.8"
bit_field = "0.7.0"
volatile = "0.2.4"
zerocopy = "0.5.0"
static_assertions = "1.1.0"
memory = { path = "../memory" }


[target.'cfg(not(prusti))'.dependencies]
cpu = { path = "../cpu" }
interrupts = { path = "../interrupts" }


[target.'cfg(target_arch = "x86_64")'.dependencies]
port_io = { path = "../../libs/port_io" }

[target.'cfg(all(target_arch = "aarch64", not(prusti)))'.dependencies]
arm_boards = { path = "../arm_boards" }

[lib]
crate-type = ["rlib"]
