[package]
name = "prusti_borrowed_shared_mp"
version = "0.1.0"
description = "Create buffers that don't align on a page size by splitting a MappedPages. Each buffer's lifetime is tied to its backing mapped pages."
authors = ["Ramla <ijazramla@gmail.com>"]
edition = "2021"

[dependencies]
proc_static_assertions = { git = "https://github.com/anton-mel/proc-assertions" }
prusti-contracts = "0.2"
zerocopy = "0.5.0"

[dependencies.log]
default-features = false
version = "0.4.8"

[dependencies.kernel_config]
path = "../kernel_config"

[dependencies.memory]
path = "../memory"

[dependencies.memory_structs]
path = "../memory_structs"

[dependencies.prusti_external_spec]
path = "../prusti_external_spec"

[lib]
crate-type = ["rlib"] # "lib" does the same thing I think