[package]
name = "prusti_memory_buffer"
version = "0.1.0"
description = "Create buffers that don't align on a page size by splitting a MappedPages. Uses the verified representation creator interface."
authors = ["Ramla <ijazramla@gmail.com>"]
edition = "2021"

[dependencies]
prusti-contracts = "0.2"

[dependencies.log]
default-features = false
version = "0.4.8"

[dependencies.kernel_config]
path = "../kernel_config"

[dependencies.memory]
path = "../memory"

[dependencies.memory_structs]
path = "../memory_structs"

[dependencies.prusti_representation_creator]
path = "../prusti_representation_creator"

[dependencies.prusti_external_spec]
path = "../prusti_external_spec"

[lib]
crate-type = ["rlib"] # "lib" does the same thing I think