[package]
authors = ["Ramla Ijaz <ijazramla@gmail.com>"]
name = "prusti_representation_creator"
description = "Verified generic data structures and a representation constructor."
version = "0.1.0"
edition = "2021"

[dependencies]
prusti-contracts = "0.2"

[dependencies.prusti_external_spec]
path = "../prusti_external_spec"

[lib]
crate-type = ["rlib"]