[package]
authors = ["Kevin Boos <kevinaboos@gmail.com>"]
name = "random2"
description = "Advanced support for serial ports (e.g., COM1, COM2) with full interrupt support"
version = "0.1.0"

[dependencies]
log = "0.4.8"
spin = "0.9.4"
core2 = { version = "0.4.0", default-features = false, features = ["alloc", "nightly"] }
x86_64 = "0.14.8"
range_inclusive = {git = "https://github.com/Ramla-I/range_inclusive"}

[dependencies.page_table_entry]
path = "../page_table_entry"

[dependencies.frame_allocator]
path = "../frame_allocator"

[dependencies.trusted_chunk]
path = "../../libs/trusted_chunk"

[dependencies.memory_structs]
path = "../memory_structs"


[lib]
crate-type = ["rlib"]
